@@ -103,7 +103,6 @@ public abstract class GradleImportingTestCase extends ExternalSystemImportingTes
       ProjectJdkTable.getInstance().addJdk(jdk);
     });
     myProjectSettings = new GradleProjectSettings();
-    GradleSettings.getInstance(myProject).setGradleVmOptions("-Xmx128m -XX:MaxPermSize=64m");
     System.setProperty(ExternalSystemExecutionSettings.REMOTE_PROCESS_IDLE_TTL_IN_MS_KEY, String.valueOf(GRADLE_DAEMON_TTL_MS));
     configureWrapper();
   }
